# mywm.c

./: .clangd  .gitignore  BTC  BTC.c  BTC.txt  LICENSE  README.md  applications_viewer  applications_viewer.c  codex_handoff_for_chatgpt.md  meson.build  mywm - コピー.c  mywm.c  mywm.txt  pty_make_reflow_test.c  settings_window.c  test_gnome.py  test_history.py  test_reflow.c  test_reflow_logic  test_reflow_logic.c  test_reflow_sim.c  test_reflow_sim_2.c  test_reflow_sim_3.c  test_sigwinch  test_sigwinch.c  test_start_line  test_start_line.c  txt_maker  txt_maker.c
.cache/clangd/index/: mywm.c.92F57F5145952F40.idx
cui_proj/: a.out  alloc_ts  allocate_test.c  build.sh  compile_command.txt  compile_flags.txt  cui  cui.c  cui.c.save  cui_soft  earn_per_sec.c  earn_per_sec.save  error_log.txt  func_ptr  gcc pty_make.c -o pty_make \  gcc pty_make.c -o pty_make \\  kbd_io.c  keybord.h  lll  loot  loot.c  paiza  paiza.c  pty_drawing.c  pty_make  pty_make.c  pty_make.h  pty_make.txt  pty_make_test  pty_make_test_script  pty_make_test_script.c  pty_make_v1  pty_make_v1.c  pty_maker_roadmap.txt  run.sh  start_sway_amd.sh  test_sigwinch_reverse  test_sigwinch_reverse.c  vulkan_mywrap.h  vulkan_otf_draw.c  (+3 more)
cui_proj/include/: codepoint_comb.h  error_log_output.h  mouse_io.h  pty_make.h  vulkan_mywrap.h
cui_proj/src/: codepoint_comb.c  earn_per_sec.c  error_log_opt.c  func_ptr.c  kbd_io.c  mouse_io.c  pty_drawing.c  pty_make_v1.c  vulkan_otf_draw.c
my_txt_editor/: build.sh  compile_flags.txt  error_log.txt  file_load_test.c  fork  ggg.c  main  main.c  main]  my_cui_lib_doc.md  my_txt_editor_settings.json  txt_editor.h  txt_editor_func.c  修正点
my_txt_editor/include/: ascii_art_comb.h  default_settings.h  error_log.h  json_read.h  language_server_communication.h  my_cui_lib.h  my_dir.h  start_menu.h  txt_editor.h
my_txt_editor/include/lsp_src/: language_server_communication.h
my_txt_editor/my_txt_editor_settings_folder/: ascii_art_img.txt
my_txt_editor/src/: error_log.c  json_read.c  language_server_communication.c  main.c  my_cui_lib_linux.c  txt_editor_draw.c  txt_editor_file.c  txt_editor_func.c  txt_editor_state.c
my_txt_editor/src/lsp_src/: language_server_communication.c
my_txt_editor/src/plugin_src/: ascii_art_comb.c  start_menu_plug.c
mybar_proj/: compile_flags.txt  mybar  mybar_build.sh  mybar_wl_build.sh
mybar_proj/include/: mybar.h  wlr-layer-shell-unstable-v1-client-protocol.h
mybar_proj/src/: mybar.c  wlr-layer-shell-unstable-v1-protocol.c
